# warcrwlock

./: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  readme.md
src/: example.rs  lib.rs
src/helpers/: attributes.rs  fields.rs  implementation.rs  methods.rs  mod.rs  module.rs  struture.rs
src/helpers/implementation/: base_methods.rs  mod.rs  wrapper_methods.rs
src/helpers/struture/: mod.rs  util.rs
src/helpers/struture/util/: generations.rs  mod.rs  normalizations.rs  reader_normalization.rs
src/helpers/traits/: mod.rs
src/helpers/traits/util/: generator_method.rs  helpers.rs  mod.rs  type_return.rs
src/tests/: mod.rs
src/util/: impl_block_helpers.rs  mod.rs
warcrwlock_test/: Cargo.toml
warcrwlock_test/src/: expantion.rs  lib.rs  possible_struct.rs
warcrwlock_test/src/test_impl/: fragment_test.rs  mod.rs  model_tests.rs  multiple_impls.rs
warcrwlock_test/src/test_in_model/: generics_with_trait.rs  mod.rs  only_structure.rs  with_generics.rs  with_into_impl.rs
warcrwlock_test/src/wrapper_model/: basic_impls.rs  mod.rs  user_impls.rs
